ajustes tela de vendas

--- a/src/app/sistema/compras/pedidos-compras/listar-pedidos-compras/listar-pedidos-compras.component.html
+++ b/src/app/sistema/compras/pedidos-compras/listar-pedidos-compras/listar-pedidos-compras.component.html
@@ -70,7 +70,7 @@
 
                                 <i class="fs-5 bi-trash-fill icon-delete p-3" cursor="pointer" (click)="delete(pedidos)"></i>
                                 <a (click)="loadPedido(pedidos)">
-                                    <i class="fs-5 bi-pen-fill icon-view p-3" (click)="confirmaPedido(pedidos)" cursor="pointer"></i>
+                                    <i class="fs-5 bi-pen-fill icon-view p-3" cursor="pointer"></i>
                                 </a>
                             </td>
                         </tr>
@@ -83,3 +83,4 @@
 </div>
 
 <app-filtrar-pedido></app-filtrar-pedido>
+<app-view-pedido [pedido]="pedido"></app-view-pedido>
