--- a/src/app/sistema/financeiro/contas-a-receber/adicionar-recebimento/adicionar-recebimento.component.html
+++ b/src/app/sistema/financeiro/contas-a-receber/adicionar-recebimento/adicionar-recebimento.component.html
@@ -185,7 +185,7 @@
                 formControlName="cliente"
               >
                 <option selected disabled>Selecione um Cliente</option>
-                <option *ngFor="let cliente of clientes" [value]="cliente.nome">{{cliente.nome}}</option>
+                <option *ngFor="let cliente of clientes" [value]="cliente.name">{{cliente.name}}</option>
               </select>
               <label class="ms-2 mt-3 small text-truncate text-custom-dark"
                 >Cliente</label
