--- a/src/app/sistema/compras/pedidos-compras/filtrar-pedido/filtrar-pedido.component.html
+++ b/src/app/sistema/compras/pedidos-compras/filtrar-pedido/filtrar-pedido.component.html
@@ -12,7 +12,7 @@
             <div class="modal-body px-4">
                 <div class="row">
                     <div class="col px-2 pt-4 p-0 m-0 form-floating">
-                        <input (keyup)="filtrarData($event)" class="form-control form-control-lg border-0 h-50 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Departamento" />
+                        <input (keyup)="filtrarData($event)" class="form-control form-control-lg border-0 h-50 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="date" placeholder="Data" />
                         <label class="ms-2 mt-3 small text-truncate text-custom-dark">Data</label
             >
           </div>
@@ -21,7 +21,7 @@
               (keyup)="filtrarValor($event)"
               class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm"
               type="text"
-              placeholder="Loja"
+              placeholder="Valor"
             />
             <label class="ms-2 mt-3 small text-truncate text-custom-dark"
               >Valor Total</label
@@ -32,7 +32,7 @@
               (keyup)="filtrarStatus($event)"
               class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm"
               type="text"
-              placeholder="Loja"
+              placeholder="Status"
             />
             <label class="ms-2 mt-3 small text-truncate text-custom-dark"
               >Status do Pedido</label
@@ -40,7 +40,6 @@
           </div>
         </div>
 
-        <!-- Lista de colaboradores -->
         <!-- Títulos da Tabela -->
         <div class="row m-0 my-5 text-custom-dark justify-content-center">
           <div class="col-2">
